# heist-standalone

./: Makefile  heist-standalone.cabal
src/: Main.hs
src/Examples/Compiled/: Render.hs
src/Examples/Interpreted/: Identity.hs  Render.hs
templates/: default.tpl  navigation.tpl  page.tpl  simple.tpl
