name:                heist-standalone
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/slabko/heist-standalone#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Slabko
maintainer:          andrew@slabko.com
copyright:           2016 Andrew Slabko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app 
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, heist, xmlhtml, lens, blaze-builder, mtl, either, map-syntax, bytestring, transformers,
                       text
  default-language:    Haskell2010
  other-modules:       Examples.Compiled.Render,
                       Examples.Interpreted.Identity,
                       Examples.Interpreted.Render

source-repository head
  type:     git
  location: https://github.com/slabko/heist-standalone
